--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ My research interests include:  Computer Vision, Deep Learning, Action Recogniti
 	  <tr>
         <td width="930" align="left" valign="middle">
           <b>Ke Yang</b>, Peng Qiao, Dongsheng Li, Shaohe Lv, Yong Dou. <b>Exploring Temporal Preservation Networks for Precise Temporal Action Localization</b>.
-					<i>AAAI 2018</i>. Hawaii, U.S., 2017. [<a href="https://arxiv.org/abs/1708.03280">arXiv</a>] </a>
+					<i>AAAI 2018</i>. New Orleans, U.S., 2018. [<a href="https://arxiv.org/abs/1708.03280">arXiv</a>] </a>
         </td>
       </tr>
 
