--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ My research interests include:  Computer Vision, Deep Learning, Action Recogniti
 
       <tr>
         <td colspan="4" width="930" height="50" align="left">
-        <i>Latst modified: Dec 9 2017</i>
+        <i>Latest modified: Dec 9 2017</i>
         </td>
       </tr>
 
