--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ margin-bottom: 0px;
 PHD Candidate
 
 <br><br>
-PDL<br>
-NUDT<br><br>
+National Laboratory for Parallel and Distributed Processing (PDL)<br><br>
+National University of Defense Technology (NUDT)<br><br>
 E-mail: yangke13@nudt.edu.cn  <br>
 </td><td>
 </td></tr>
@@ -75,7 +75,7 @@ E-mail: yangke13@nudt.edu.cn  <br>
 
 	  <tr>
 	    <td width="930">
-I am a Second-year PHD Candidate of NUDT.
+I am a currently second-year PHD Candidate of NUDT. I obtained my Master degree from NUDT in 2016 and I received B.S. degree from Beijing Institute of Technology in 2013.
 		</td>
 	  </tr>
 
@@ -92,7 +92,7 @@ I am a Second-year PHD Candidate of NUDT.
 
 		<tr>
 		 <td width="930">
-My research interests include:  Computer Vision, Deep Learning, Action Recognition, Temporal Action Localization.
+My current research interests include:  Computer Vision, Deep Learning, Action Recognition, Temporal Action Localization.
 		 </td>
 		</tr>
 
