--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ margin-bottom: 0px;
 PHD Candidate
 
 <br><br>
-National Laboratory for Parallel and Distributed Processing (PDL)<br><br>
+National Laboratory for Parallel and Distributed Processing (PDL)<br>
 National University of Defense Technology (NUDT)<br><br>
 E-mail: yangke13@nudt.edu.cn  <br>
 </td><td>
