--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ E-mail: yangke13@nudt.edu.cn  <br>
 
 	  <tr>
 	    <td width="930">
-I am a currently second-year PHD Candidate of NUDT. I obtained my Master degree from NUDT in 2016 and I received B.S. degree from Beijing Institute of Technology in 2013.
-		</td>
+I am currently a second-year PHD Candidate of NUDT. I obtained my Master degree from NUDT in 2016 and I received B.S. degree from Beijing Institute of Technology in 2013.
+<br> I am looking for internship opportunities.		
+		  </td>
 	  </tr>
 
 		<tr>
