--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ E-mail: yangke13@nudt.edu.cn  <br>
 	  <tr>
 	    <td width="930">
 I am currently a second-year PHD Candidate of NUDT. I obtained my Master degree from NUDT in 2016 and I received B.S. degree from Beijing Institute of Technology in 2013.
-<br> <font color="green">I am looking for internship opportunities!</font>.		
+<br> <font color="Red"><b>I am looking for internship opportunities!<b></font>		
 		  </td>
 	  </tr>
 
