--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ My current research interests include:  Computer Vision, Deep Learning, Action R
 	  <tr>
         <td width="930" align="left" valign="middle">
           <b>Ke Yang</b>, Peng Qiao, Dongsheng Li, Shaohe Lv, Yong Dou. <b>Exploring Temporal Preservation Networks for Precise Temporal Action Localization</b>.
-					<i>AAAI 2018</i>. New Orleans, U.S., 2018. [<a href="https://arxiv.org/abs/1708.03280">arXiv</a>] </a>
+					<i>The Thirty-Second AAAI Conference on Artificial Intelligence (<b>AAAI 2018</b>)</i>. New Orleans, U.S., 2018. [<a href="https://arxiv.org/abs/1708.03280">arXiv</a>] </a>
         </td>
       </tr>
 
