--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ margin-bottom: 0px;
 <td >
 <!-- <h3> Ke Yang </h3> -->
 <p class="style2" > Ke Yang </p>
-PHD Candidate
+PhD Candidate
 
 <br><br>
 National Laboratory for Parallel and Distributed Processing (PDL)<br>
@@ -75,7 +75,7 @@ E-mail: yangke13@nudt.edu.cn  <br>
 
 	  <tr>
 	    <td width="930">
-I am currently a second-year PHD Candidate of National University of Defense Technology. I obtained my Master degree from National University of Defense Technology in 2016 and I received B.S. degree from Beijing Institute of Technology in 2013.
+I am currently a second-year PhD Candidate of National University of Defense Technology. I obtained my Master degree from National University of Defense Technology in 2016 and I received B.S. degree from Beijing Institute of Technology in 2013.
 <br> <font color="Red"><b>I am looking for internship opportunities!<b></font>		
 		  </td>
 	  </tr>
